// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot 1`] = `
<Modal
  className="AddSourceModal"
  onClose={[Function]}
  onConfirm={[Function]}
  open={true}
>
  <Component>
    Add Source
  </Component>
  <Component>
    <ButtonGroup>
      <ForwardRef(Button)
        active={true}
        onClick={[Function]}
      >
        Definition
      </ForwardRef(Button)>
      <ForwardRef(Button)
        active={false}
        onClick={[Function]}
      >
        Tenant
      </ForwardRef(Button)>
    </ButtonGroup>
    <Form>
      <DefinitionSource
        definitionsWithTenants={Array []}
        onChange={[Function]}
        setInvalid={[Function]}
      />
    </Form>
  </Component>
  <Component>
    <ForwardRef(Button)
      className="cancel"
      main={true}
      onClick={[Function]}
    >
      Cancel
    </ForwardRef(Button)>
    <ForwardRef(Button)
      className="confirm"
      disabled={true}
      main={true}
      onClick={[Function]}
      primary={true}
    >
      Add
    </ForwardRef(Button)>
  </Component>
</Modal>
`;

exports[`should only show MultiDefinitionSource if tenants are not available 1`] = `
<Modal
  className="AddSourceModal"
  onClose={[Function]}
  onConfirm={[Function]}
  open={true}
>
  <Component>
    Add Source
  </Component>
  <Component>
    <Form>
      <MultiDefinitionSource
        definitions={Array []}
        onChange={[Function]}
        setInvalid={[Function]}
      />
    </Form>
  </Component>
  <Component>
    <ForwardRef(Button)
      className="cancel"
      main={true}
      onClick={[Function]}
    >
      Cancel
    </ForwardRef(Button)>
    <ForwardRef(Button)
      className="confirm"
      disabled={true}
      main={true}
      onClick={[Function]}
      primary={true}
    >
      Add
    </ForwardRef(Button)>
  </Component>
</Modal>
`;
